<resources>
    <string name="app_name">Fashion Store</string>
    <string name="email_mobile">EMAIL/MOBILE</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forward_button">Forward Button</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email">EMAIL</string>
    <string name="app_logo">App_Logo</string>
    <string name="birthday_Date">%1$d/%2$d/%3$d</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="name">NAME</string>
    <string name="open_lock">open lock</string>
    <string name="forget_pw_dialog">Enter the Email associated with your account to reset password.</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="re_type_password">RE-TYPE PASSWORD</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="splash_background">splash_background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_name">{PLACEHOLDER NAME}</string>
    <string name="placeholder_price">{PLACEHOLDER PRICE}$</string>
    <string name="featured_products">FEATURED PRODUCTS</string>
    <string name="hot_logo">hot_logo</string>
    <string name="product_img">product_img</string>
    <string name="category_image">category image</string>
    <string name="category_category_name">Category: {Category Name}</string>
    <string name="price_price">Price: {Price}</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_page_back_bt">product_page_back_bt</string>
    <string name="product_image_view">product_image_view</string>
    <string name="description_description">Description: {Description}</string>
    <string name="quantity">Quantity:</string>
    <string name="_1">1</string>
    <string name="search_query">{SEARCH QUERY}</string>
    <string name="dec_button">dec_button</string>
    <string name="inc_button">inc_button</string>
    <string name="enter_your_shipping_address">Enter your Shipping address, this address will only be used to Ship you your products.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="payment_method">Payment Method:</string>
    <string name="no_of_items">No. of Items:</string>
    <string name="submit_order">SUBMIT ORDER</string>
    <string name="total">Total</string>
    <string name="order_total">Order Total:</string>
    <string name="no">No</string>
    <string name="search_location_bt">Search location bt</string>
    <string name="orders_from_date_to_date_last_month">Orders From {DATE} to {DATE_LAST_MONTH}</string>
    <string name="date">{DATE}</string>
</resources>