<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scaleY="1.005"
    android:background="@drawable/splash_bg">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textAlignment="center"
            />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/layout_background"
        android:layout_marginTop="-30dp"
        android:scaleY="0.90"
        android:scaleX="0.90">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/shop_128"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_logo" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/remember_me" />

        <ImageButton
            android:id="@+id/sign_in_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/forward_button"
            android:src="@drawable/ic_round_arrow_forward_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="-20dp"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup_page_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/forget_pw_page_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background"
            android:text="@string/forget_password"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>