<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scaleY="1.005"
    android:background="@drawable/splash_bg">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textAlignment="center"
            />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/layout_background"
        android:layout_marginTop="-30dp"
        android:scaleY="0.90"
        android:scaleX="0.90">

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_round_person_outline_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_outline_calendar_today_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/birthday"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="date"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/sign_up_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/forward_button"
            android:src="@drawable/ic_round_arrow_forward_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:padding="5dp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>