<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scaleY="1.005"
    android:background="@drawable/splash_bg">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textAlignment="center"
            />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/layout_background_full"
        android:layout_marginTop="-30dp"
        android:scaleY="0.90"
        android:scaleX="0.90">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/ic_round_lock_open_128"
            android:contentDescription="@string/open_lock"
            app:srcCompat="@drawable/ic_round_lock_open_128" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/forget_pw_dialog"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/new_password"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/reset_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:hint="@string/re_type_password"
            android:padding="20dp"
            android:textSize="14sp"
            android:textColorHint="#606060"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/reset_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/forward_button"
            android:src="@drawable/ic_round_arrow_forward_24" />

    </LinearLayout>


</LinearLayout>